--- a/gradle.properties
+++ b/gradle.properties
@@ -10,13 +10,23 @@ org.gradle.jvmargs=-Xmx1G
 	loom_version=0.2.5-SNAPSHOT
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = net.fabricmc
-	archives_base_name = fabric-example-mod
+	mod_version=1.0.0
+	maven_group=com.lettuce.fudge
+	#TODO: fill in
+	archives_base_name=
+	display_name=
+	description=
+	github_project=natanfudge/
+	license=The MIT License
+	bintray_gradle_version=1.8.3
+	cursegradle_version=1.4.0
+	curseforge_id=
+	curseforge_slug=
 
 # Dependencies
-#	 currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+	# Currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 	fabric_version=0.3.1+build.208
+	drawer_version=1.1.1
 
 # Kotlin
     # Changing this WILL affect the build, as defined in settings.gradle
